# neverlight-mail-tui

./: CLAUDE.md  Cargo.toml  README.md  justfile
.claude/: settings.local.json
.github/workflows/: ci.yml
src/: app.rs  compose.rs  main.rs  setup.rs  threading.rs  ui.rs
src/app/: actions.rs  apply.rs  compose.rs  images.rs  lanes.rs  mod.rs  navigation.rs  search.rs  sync.rs  watch.rs
