[package]
name = "nevermail-tui"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Terminal email client powered by nevermail-core"
repository = "https://github.com/jstelzer/nevermail-tui"

[dependencies]
# Email engine
nevermail-core = "0.0.2"

# TUI framework
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"
