[package]
name = "neverlight-mail-tui"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Terminal email client powered by neverlight-mail-core"
repository = "https://github.com/jstelzer/neverlight-mail-tui"

[dependencies]
# Email engine
neverlight-mail-core = { version  = "0.0.6" }

# TUI framework
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"
ratatui-textarea = "0.8"
image = "0.25"
ratatui-image = { version = "10.0", default-features = false, features = ["crossterm", "image-defaults", "tokio"] }
